Closed Bug 198082 Opened 22 years ago Closed 22 years ago

AIX: GTK2 build fails (undefined symbol MAX_BUTTONS)

Categories

(Core Graveyard :: Embedding: GTK Widget, defect)

Other
AIX
defect
Not set
normal

Tracking

(Not tracked)

RESOLVED FIXED

People

(Reporter: pkwarren, Assigned: pkwarren)

References

Details

Attachments

(1 file)

When building embedding/browser/gtk/src: rm -f libgtkembedmoz.so /usr/vacpp/bin/makeC++SharedLib_r -ldl -p1 -brtl -bso -bsymbolic -bnortllib -o libgtkembedmoz.so gtkmozembedmarshal.o gtkmozembed2.o EmbedPrivate.o EmbedWindow.o EmbedProgress.o EmbedContentListener.o EmbedEventListener.o EmbedWindowCreator.o EmbedStream.o EmbedPrompter.o GtkPromptService.o -brtl -bso -bh:5 ../../../../dist/lib/libembed_base_s.a ../../../../dist/lib/libprofdirserviceprovider_s.a -L../../../../dist/bin -lxpcom -liconv -L../../../../dist/bin -L/home/pkw/builds/trunk/mozilla/obj-gtk2-opt/dist/lib -lplds4 -lplc4 -lnspr4 -lpthreads -L/opt/freeware/gnome/lib -lgtk-x11-2.0 -lgdk-x11-2.0 -latk-1.0 -lgdk_pixbuf-2.0 -lm -lpangox-1.0 -lpango-1.0 -lgobject-2.0 -lgmodule-2.0 -lglib-2.0 -lintl -liconv -lC_r -ldl -lm -lc_r ld: 0711-317 ERROR: Undefined symbol: EmbedPrompter::MAX_BUTTONS
Attached patch Patch v1Splinter Review
MAX_BUTTONS is currently defined as "static const int MAX_BUTTONS = 3". This does not compile on the AIX compiler as currently written. There are three alternative ways to declare this so it will compile: 1) Change it to a #define - what I did in this patch. 2) Change it to an enum. 3) Initialize EmbedPrompter::MAX_BUTTONS after the class declaration.
Attachment #117635 - Flags: superreview?(blizzard)
Attachment #117635 - Flags: review?(bryner)
Reassigning to me.
Assignee: blizzard → pkw
Status: NEW → ASSIGNED
Comment on attachment 117635 [details] [diff] [review] Patch v1 sr=blizzard
Attachment #117635 - Flags: superreview?(blizzard) → superreview+
Attachment #117635 - Flags: review?(bryner) → review+
Fixed. Checking in EmbedPrompter.cpp; /cvsroot/mozilla/embedding/browser/gtk/src/EmbedPrompter.cpp,v <-- EmbedPrompter.cpp new revision: 1.6; previous revision: 1.5 done Checking in EmbedPrompter.h; /cvsroot/mozilla/embedding/browser/gtk/src/EmbedPrompter.h,v <-- EmbedPrompter.h new revision: 1.4; previous revision: 1.3 done
Status: ASSIGNED → RESOLVED
Closed: 22 years ago
Resolution: --- → FIXED
Product: Core → Core Graveyard
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: