Bug 198082 - AIX: GTK2 build fails (undefined symbol MAX_BUTTONS) r=bryner@netscape.com, sr=blizzard@mozilla.org